Add view transitions using Astro 3.0
View transitions:
- Fade in and out between pages
- Animating project images between pages

Also fix some bugs caused by it.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 import Header from '../components/Header.astro';
 import '../styles/global.css';
 
@@ -20,6 +21,7 @@ const { title, description, darkMode = true} = Astro.props as Props;
     <meta name="description" content={description} />
     <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>{title}</title>
+    <ViewTransitions />
 </head>
 <body class = {darkMode ? 'dark' : 'light'}>
     <Header/>
