--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -23,8 +23,8 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
 
 <div class='card' id={title}>
         <div class="projectCard" data-tags={tags}>
-            <a href={`/${slug}`} class="thumbnail"  >
-                <Image src={thumbnailPath} alt={title + " thumbnail"}/>
+            <a href={`/${slug}`} class="thumbnail">
+                <Image src={thumbnailPath} alt={title + " thumbnail"} transition:name=`project-img-${title}`/>
             </a>
         <div class="details">
             <h2>
