Change some of the layout for small screens
For small screens:
- Add back filter button
- Filter panel is on top of the project result panel
- Add filter icons, from flaticon (https://www.flaticon.com/free-icons/filter)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="container">
-            <a href="index.html">Ethan Ong</a>
+            <a href="/">Ethan Ong</a>
         <nav>
             <ul>
                 <li><a href="/" id="header-home">Home</a></li>
@@ -45,6 +45,10 @@
     .header a {
         text-decoration: none;
         color: var(--color-text);
+    }
+
+    .header a:hover {
+        text-decoration: underline;
     }
     /* @media screen and (max-width: 650px) {
     .header {
