--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,6 +4,6 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title = "Home" description="Portfolio Home Page">
 	<h1>404 Page</h1>
-    <h2>If the page should be there, please <a href="https://gnoxnahte.com/about#contact">contact me</a></h2>
+    <h2>If the page should be there, please <a href="/about#contact">contact me</a></h2>
 </Layout>
     
