--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,9 +6,7 @@ import Layout from "../layouts/Layout.astro";
 import { Tags } from "../others/tags";
 import { Image } from "astro:assets";
 
-import filterIcon from "../images/General/Icons/filter.png";
-import filterFilledIcon from "../images/General/Icons/filter-filled.png";
-import cancelIcon from "../images/General/Icons/filter-filled.png"
+import Icon, { Sprite } from "astro-icon";
 
 const cards = await getCollection("projects");
 
@@ -79,10 +77,11 @@ SeparateTags();
         <div class="layout-container">
             <div class="filterPanel">
                 <div class="searchBar card">
+                    <Icon name="ic:round-search" class="searchIcon"/>
                     <input id="searchInput" type="search" placeholder="Search by Title"/>
-                    <button id="openFilterPanelBtn">Filter
-                        <Image src={filterIcon} alt="filter-icon" class="filter-icon"/>
-                        <Image src={filterFilledIcon} alt="filter-filled-icon" class="filter-filled-icon"/>
+                    <button id="openFilterPanelBtn">
+                        <span>Filter</span>
+                        <Icon name="ic:round-tune" class="filterIcon" />
                     </button>
                 </div> 
                 <div class="card filterTagCard">
@@ -167,6 +166,7 @@ SeparateTags();
 
     .searchBar {
         display: flex;
+        position: relative;
     }
 
     .searchBar input {
@@ -176,7 +176,7 @@ SeparateTags();
         border-color: #555555;
         border-style: solid;
         color: var(--color-text);
-        padding: 0.5rem;
+        padding: 0.5rem 0.5rem 0.5rem 2rem;
     }
 
     #openFilterPanelBtn {
@@ -191,33 +191,13 @@ SeparateTags();
         white-space: nowrap;
     }
 
+    #openFilterPanelBtn > span {
+        margin-right: 5px;
+    }
+
     #openFilterPanelBtn:hover {
         cursor: pointer;
         background-color: #111111;
-    }
-    
-    #openFilterPanelBtn:hover .filter-icon {
-        display: none;
-    }
-    
-    #openFilterPanelBtn .filter-icon {
-        display: initial
-    }
-    
-    #openFilterPanelBtn:hover .filter-filled-icon {
-        display: initial;
-    }
-    
-    #openFilterPanelBtn .filter-filled-icon {
-        display: none
-    }
-    
-
-    .searchBar img {
-        color: white;
-        height: 1rem;
-        width: 1rem;
-        margin-left: 0.25rem;
     }
 
     input[type="search"]::-webkit-search-cancel-button {
@@ -225,11 +205,26 @@ SeparateTags();
         height: 1em;
         width: 1em;
         border-radius: 50%;
+        /* TODO: Change to google icon */
         background: url(https://pro.fontawesome.com/releases/v5.10.0/svgs/solid/times-circle.svg) no-repeat 50% 50%;
         background-size: contain;
         background-color: white;
     }
 
+    .filterIcon {
+        height: 1rem;
+        width: 1rem;
+    }
+
+    .searchIcon {
+        position: absolute;
+        height: 1.25rem;
+        width: 1.25rem;
+        z-index: 1;
+        top: 2rem;
+        left: 2.1rem;
+    }
+    
     .filterPanel h2 {
         display:inline;
         margin: 0;
@@ -263,7 +258,6 @@ SeparateTags();
         font-size: 3rem;
     }
 
-    
     @media screen and (min-width: 1250px) {
         .layout-container {
             flex-direction: row;
