Add animations for the project cards when filtering and some layout changes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -29,8 +29,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin: 0 auto;
         padding: 0 20px;
+        max-width: 1500px;
     }
     
     .header nav ul {
@@ -50,6 +50,7 @@
     .header a:hover {
         text-decoration: underline;
     }
+
     /* @media screen and (max-width: 650px) {
     .header {
         height: 250px;
@@ -74,3 +75,5 @@
 }
 
 </style>
+
+<!-- TODO: Highlight which page is the user at. Use typescript to check from the url? -->
