--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -37,9 +37,14 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
 </div> 
 
 <style>
+
+
     .card {
         max-height: 25rem;
-        transition: transform 100ms;
+        /* transition: transform 200ms; */
+
+        --animation-time: 1000ms;
+        --animation-curve: cubic-bezier(0.15, 0.79, 0.2, 1)
     }
 
     .projectCard {
@@ -86,20 +91,20 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
     .hideCard {
         /* max-height: 0; */
         /* transition: max-height 2000ms; */
-        animation: 750ms ease-out  both hideCard;
+        animation: var(--animation-time) var(--animation-curve) both hideCard;
 
         /* position: absolute; */
     }
 
     @keyframes hideCard {
         from {
-            transform: translateX(0) scaleY(1);
+            transform: translateX(0%) scaleY(1);
             max-height: 20rem;
             opacity: 1;
         }
-        25% {
+        50% {
             opacity: 0;
-            /* transform: translateX(50%) scaleY(0); */
+            transform: translateX(30%);
         }
         to {
             padding: 0;
@@ -112,24 +117,24 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
     .showCard {
         /* max-height: 0; */
         /* transition: max-height 2000ms; */
-        animation: 750ms ease-out  both showCard;
+        animation: calc(var(--animation-time) * 2) var(--animation-curve) both showCard;
 
         /* position: absolute; */
     }
 
     @keyframes showCard {
         from {
-            transform: translateX(50) scaleY(0);
+            transform: translateX(30%);
             padding: 0;
             margin: 0;
             max-height: 0;
             opacity: 0;
         }
         50% {
-            opacity: 0;
+            transform: translateX(0%) scaleY(1);
+            opacity: 1;
         }
         to {
-            transform: translateX(0%) scaleY(1);
             max-height: 25rem;
             opacity: 1;
             padding: 25px;
