--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -37,16 +37,16 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
 </div> 
 
 <style>
-
-
     .card {
-        max-height: 25rem;
-        /* transition: transform 200ms; */
-
+        /* Changes depending on the screen size */
+        --curr-max-height: 25rem; 
+        
         --animation-time: 1000ms;
-        --animation-curve: cubic-bezier(0.15, 0.79, 0.2, 1)
+        --animation-curve: cubic-bezier(0.15, 0.79, 0.2, 1);
+        
+        max-height: var(--curr-max-height);
     }
-
+    
     .projectCard {
         display: flex;
         align-items: center;
@@ -61,7 +61,6 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
 
     .projectCard .thumbnail img {
         height: unset;
-        max-height: 25rem;
         width: 100%;
         object-fit: contain;
     }
@@ -100,7 +99,7 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
 
     @keyframes hideCard {
         from {
-            max-height: 25rem;
+            max-height: var(--curr-max-height);
             opacity: 1;
         }
         50% {
@@ -133,7 +132,7 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
             opacity: 1;
         }
         to {
-            max-height: 25rem;
+            max-height: var(--curr-max-height);
             opacity: 1;
             padding: 25px;
             margin-bottom: 20px;
@@ -141,6 +140,10 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
     }
 
     @media screen and (max-width: 750px) {
+        .card {
+            --curr-max-height: 50rem;
+        }
+
         .projectCard {
           flex-direction: column;
           align-items: flex-start;
