--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,21 @@ const { title, description, darkMode = true} = Astro.props as Props;
 
 ---
 
+<!-- 
+    Hello Fellow Developer!
+
+    If you have any suggestions for improvements, I'd love your feedback.
+
+    Also, if you're impressed by my work and are considering me for a project, feel free to reach out.  
+    I'm always on the lookout for interesting and reasonably priced projects, especially if my schedule allows.
+
+    You can contact me at:
+    Email: gnoxnahte.dev@gmail.com
+    Twitter: https://twitter.com/GnoxNahteDev
+    GitHub: https://github.com/GnoxNahte
+    LinkedIn (Profile in progress): https://www.linkedin.com/in/ethanongsg/
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
