--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -56,7 +56,7 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
     .projectCard .thumbnail {
         width: 30%;
         min-width: 30%;
-        /* overflow: hidden; */
+        overflow: hidden;
     }
 
     .projectCard .thumbnail img {
@@ -67,7 +67,7 @@ const {title, description, thumbnailPath, slug, tags} = Astro.props as Props;
     }
 
     .projectCard:hover .thumbnail img {
-        transform: scale(1.025);
+        transform: scale(1.05);
     }
 
     .projectCard .details {
